--- a/messages.html
+++ b/messages.html
@@ -9,6 +9,6 @@
         <h1>Happy Birtday Camille!</h1>
         <p> I love you </p>
         <img src="love.png">
-        <p><i>yes i made this myself</i></p>
+        <p><i>yes i made this website myself</i></p>
     </body>
 </html>
